[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "strictjson"
version = "6.1.0"
authors = [
  { name="John Tan Chong Min", email="tanchongmin@gmail.com" },
]
description = "A Structured Output Framework for LLM Outputs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["asyncio", "pydantic"]

[project.urls]
Homepage = "https://github.com/tanchongmin/strictjson"
Issues = "https://github.com/tanchongmin/strictjson/issues"