[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "strictjson"
version = "6.1.2"
authors = [
  { name="John Tan Chong Min", email="tanchongmin@gmail.com" },
]
description = "A Structured Output Framework for LLM Outputs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ["pydantic"]

[project.urls]
Homepage = "https://github.com/tanchongmin/strictjson"
Issues = "https://github.com/tanchongmin/strictjson/issues"