[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strictjson"
version = "6.2.0"
authors = [{ name = "John Tan Chong Min", email = "tanchongmin@gmail.com" }]
description = "A Structured Output Framework for LLM Outputs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = [
  "pydantic>=2.12.4",
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/tanchongmin/strictjson"
Issues = "https://github.com/tanchongmin/strictjson/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["strictjson*"]   # ✅ only include your package
